move trigger logic from pse to pe

--- a/force-app/main/default/classes/PatientDelegateService.cls
+++ b/force-app/main/default/classes/PatientDelegateService.cls
@@ -4,11 +4,7 @@
 
 public without sharing class PatientDelegateService {
 
-    public class PatientDelegateServiceException extends Exception {
-    }
-
-    public static final String PH_WELCOME_CODE = 'Welcome_To_The_PH_Delegate';
-    public static final String STUDY_WELCOME_CODE = 'Welcome_to_the_Study_Patient_Delegates';
+    public class PatientDelegateServiceException extends Exception {}
 
     private List<Contact> delegates = new List<Contact>();
     private Boolean isDelegate = false;
@@ -177,14 +173,14 @@ public without sharing class PatientDelegateService {
         List<Alert__c> alertList = new List<Alert__c>();
         alertList.add(new Alert__c(
                 Contact__c = contactDelegate.Id,
-                Alert_Code__c = PH_WELCOME_CODE,
+                Alert_Code__c = Alert.ALERT_CODE_WELCOME_PH_DELEGATE,
                 Record_ID__c = participantState.pe.Id
         ));
 
         if (participantState.value == ParticipantService.ParticipantStates.PARTICIPANT) {
             alertList.add(new Alert__c(
                         Contact__c = contactDelegate.Id,
-                        Alert_Code__c = STUDY_WELCOME_CODE,
+                        Alert_Code__c = Alert.ALERT_CODE_WELCOME_STUDY_DELEGATE,
                         Record_ID__c = participantState.pe.Id
                 ));
         }
