--- a/force-app/main/default/classes/VisitResultsService.cls
+++ b/force-app/main/default/classes/VisitResultsService.cls
@@ -74,6 +74,13 @@ public inherited sharing class VisitResultsService {
                 );
     }
 
+    public Boolean checkOnAccess(ParticipantService.ParticipantState pState) {
+        return !ParticipantService.ParticipantStates.ALUMNI.equals(pState.value)
+                        || pState.isDelegate
+                        || !VisitResultSharingService.isVisitResultAvailable()
+                        || !pState.pse.Participant_Contact__r.Visit_Results_Opt_In__c;
+    }
+
     private List<VisitResultWrapper> getVisitResultWrappers(List<Visit_Result__c> visitResults, List<Visit_Result_TypeM__mdt> visitResultTypes) {
 
         Map<String, Visit_Result__c> visitResultsByTypeDeveloperNames = this.getVisitResultsByTypeDeveloperNames(visitResults);
