--- a/force-app/main/default/classes/VisitResultsService.cls
+++ b/force-app/main/default/classes/VisitResultsService.cls
@@ -41,7 +41,7 @@ public inherited sharing class VisitResultsService {
     public List<Patient_Visit__c> getPatientVisitsForReport() {
 
         ParticipantService.ParticipantState pState = ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();
-        if (pState == null || pState.ctp == null || pState.ctp.Visit_Plan__c == null || pState.pse == null) {
+        if (pState == null || pState.ctp == null || pState.ctp.Visit_Plan__c == null || pState.pe == null) {
             return null;
         }
 
@@ -54,7 +54,7 @@ public inherited sharing class VisitResultsService {
                 '(SELECT Name, Actual_Value__c, Min_Value__c, Max_Value__c, Measurement__c, Result_Type__c, Patient_Visit__r.Visit_Number__c FROM Visit_Results__r) ' +
                 'FROM Patient_Visit__c ' +
                 'WHERE Visit__r.Visit_Plan__c = \'' + pState.ctp.Visit_Plan__c + '\'' +
-                ' AND Participant_Study_Enrollment__c = \'' + pState.pse.Id + '\'' +
+                ' AND Participant_Enrollment__c = \'' + pState.pe.Id + '\'' +
                 ' AND Status__c = \'Completed\'' +
                 ' ORDER BY Completed_Date__c NULLS LAST';
 
