--- a/force-app/main/triggers-implementation/classes/ParticipantEnrollmentTriggerHandler.cls
+++ b/force-app/main/triggers-implementation/classes/ParticipantEnrollmentTriggerHandler.cls
@@ -7,43 +7,43 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
 
     // Handlers: -------------------------------------------------------------------------------------------------------
 
-    public class PrepareAdditionalFieldsHandler extends TriggerHandler{
+    public class PrepareAdditionalFieldsHandler extends TriggerHandler {
 
         public override void beforeInsert(List<SObject> newList) {
             new ParticipantEnrollmentTriggerHandler(newList).prepareAdditionalFields(newList, null);
         }
 
         public override void beforeUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            new ParticipantEnrollmentTriggerHandler(newList).prepareAdditionalFields(newList, (Map<Id, Participant_Enrollment__c>)oldMap);
+            new ParticipantEnrollmentTriggerHandler(newList).prepareAdditionalFields(newList, (Map<Id, Participant_Enrollment__c>) oldMap);
         }
     }
 
-    public class CreateUsersOrSendNotificationsHandler extends TriggerHandler{
+    public class CreateUsersOrSendNotificationsHandler extends TriggerHandler {
 
         public override void afterInsert(List<SObject> newList) {
             new ParticipantEnrollmentTriggerHandler(newList).createUsersOrSendNotifications(newList, null);
         }
 
         public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            new ParticipantEnrollmentTriggerHandler(newList).createUsersOrSendNotifications(newList, (Map<Id, Participant_Enrollment__c>)oldMap);
+            new ParticipantEnrollmentTriggerHandler(newList).createUsersOrSendNotifications(newList, (Map<Id, Participant_Enrollment__c>) oldMap);
         }
     }
 
-    public class SendCalloutOnEligibilityPassedHandler extends TriggerHandler{
+    public class SendCalloutOnEligibilityPassedHandler extends TriggerHandler {
 
         public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            sendCalloutOnEligibilityPassed(newList, (Map<Id, Participant_Enrollment__c>)oldMap);
+            sendCalloutOnEligibilityPassed(newList, (Map<Id, Participant_Enrollment__c>) oldMap);
         }
     }
 
-    public class CreateStatusTrackingHistoryRecordsHandler extends TriggerHandler{
+    public class CreateStatusTrackingHistoryRecordsHandler extends TriggerHandler {
 
         public override void beforeInsert(List<SObject> newList) {
             setChangedDate(newList);
         }
 
-        public override void beforeUpdate(List<SObject> newList,  Map<Id, SObject> oldMap) {
-            resetNotesAndSetChangeDate(newList, (Map<Id, Participant_Enrollment__c>)oldMap);
+        public override void beforeUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            resetNotesAndSetChangeDate(newList, (Map<Id, Participant_Enrollment__c>) oldMap);
         }
 
         public override void afterInsert(List<SObject> newList) {
@@ -51,7 +51,7 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
         }
 
         public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            createHistoryRecords(newList, (Map<Id, Participant_Enrollment__c>)oldMap);
+            createHistoryRecords(newList, (Map<Id, Participant_Enrollment__c>) oldMap);
         }
     }
 
@@ -73,17 +73,17 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
         }
     }
 
-    public class CreateVisitsScheduleHandler extends TriggerHandler{
+    public class CreateVisitsScheduleHandler extends TriggerHandler {
 
-        public override void afterInsert(List<SObject> newList){
-            createVisitsSchedule((List<Participant_Enrollment__c>) newList);
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            createVisitsSchedule((List<Participant_Enrollment__c>) newList, (Map<Id, Participant_Enrollment__c>) oldMap);
         }
     }
 
     public class CreateWelcomeToStudyAlertHandler extends TriggerHandler {
 
-        public override void afterInsert(List<SObject> newList) {
-            createStudyAlerts((List<Participant_Enrollment__c>) newList);
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            createStudyAlerts((List<Participant_Enrollment__c>) newList, (Map<Id, Participant_Enrollment__c>) oldMap);
         }
     }
 
@@ -100,7 +100,19 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
             sendDropEmails((List<Participant_Enrollment__c>) newList, (Map<Id, Participant_Enrollment__c>) oldMap);
         }
     }
-    
+
+    public class SetCurrentEnrollmentHandler extends TriggerHandler {
+
+        public override void afterInsert(List<SObject> newList) {
+            setupCurrentEnrollment((List<Participant_Enrollment__c>) newList, null);
+        }
+
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            setupCurrentEnrollment((List<Participant_Enrollment__c>) newList, (Map<Id, Participant_Enrollment__c>) oldMap);
+        }
+
+    }
+
     // Logic: ----------------------------------------------------------------------------------------------------------
 
 
@@ -108,14 +120,14 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
     private Map<Id, HCP_Enrollment__c> hcpeMap;
     private Map<Id, Participant__c> participantMap;
 
-    public ParticipantEnrollmentTriggerHandler(List<Participant_Enrollment__c> newList){
+    public ParticipantEnrollmentTriggerHandler(List<Participant_Enrollment__c> newList) {
         List<Id> ssIds = new List<Id>();
         List<Id> hcpeIds = new List<Id>();
         List<Id> participantIds = new List<Id>();
-        for(Participant_Enrollment__c pe : newList){
-            if(pe.Study_Site__c != null) ssIds.add(pe.Study_Site__c);
-            if(pe.HCP__c != null) hcpeIds.add(pe.HCP__c);
-            if(pe.Participant__c != null) participantIds.add(pe.Participant__c);
+        for (Participant_Enrollment__c pe : newList) {
+            if (pe.Study_Site__c != null) ssIds.add(pe.Study_Site__c);
+            if (pe.HCP__c != null) hcpeIds.add(pe.HCP__c);
+            if (pe.Participant__c != null) participantIds.add(pe.Participant__c);
         }
         ssMap = new Map<Id, Study_Site__c>([
                 SELECT Id, Principal_Investigator__c,
@@ -127,12 +139,12 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
                         Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c,
                         Clinical_Trial_Profile__r.NCT_Number__c
                 FROM Study_Site__c
-                WHERE Id IN: ssIds
+                WHERE Id IN:ssIds
         ]);
         hcpeMap = new Map<Id, HCP_Enrollment__c>([
                 SELECT Id, HCP_Contact__c
                 FROM HCP_Enrollment__c
-                WHERE Id IN: hcpeIds
+                WHERE Id IN:hcpeIds
         ]);
         participantMap = new Map<Id, Participant__c>([
                 SELECT Id,
@@ -141,36 +153,36 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
                         Name,
                         IsCountry_NOT_Eligible_for_Emails__c
                 FROM Participant__c
-                WHERE Id IN: participantIds
+                WHERE Id IN:participantIds
         ]);
     }
 
     @TestVisible
-    private void prepareAdditionalFields(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap){
+    private void prepareAdditionalFields(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap) {
         List<Contact> participantContacts = new List<Contact>();
-        for(Participant_Enrollment__c pe : newList){
+        for (Participant_Enrollment__c pe : newList) {
             String nctNumber;
             String participantName;
             Boolean visitOpt = false;
 
-            if(pe.Study_Site__c != null){
+            if (pe.Study_Site__c != null) {
                 Study_Site__c ss = ssMap.get(pe.Study_Site__c);
-                if(ss != null) {
+                if (ss != null) {
                     pe.PI_Contact__c = ss.Principal_Investigator__c;
                     pe.Clinical_Trial_Profile__c = ss.Clinical_Trial_Profile__c;
                     nctNumber = ss.Clinical_Trial_Profile__r.NCT_Number__c;
                     visitOpt = ss.Clinical_Trial_Profile__r.Shareback_Settings_On_Participant_Level__c;
                 }
             }
-            if(pe.HCP__c != null){
+            if (pe.HCP__c != null) {
                 HCP_Enrollment__c hcpe = hcpeMap.get(pe.HCP__c);
-                if(hcpe != null) pe.HCP_Contact_HCPEnroll__c = hcpe.HCP_Contact__c;
+                if (hcpe != null) pe.HCP_Contact_HCPEnroll__c = hcpe.HCP_Contact__c;
             }
-            if(pe.Participant__c != null){
+            if (pe.Participant__c != null) {
                 Participant__c participant = participantMap.get(pe.Participant__c);
-                if(participant != null) {
+                if (participant != null) {
                     pe.Participant_Contact__c = participant.Contact__c;
-                    if(oldMap == null) {
+                    if (oldMap == null) {
                         participant.Contact__r.Visit_Results_Opt_In__c = visitOpt;
                         participantContacts.add(participant.Contact__r);
                     }
@@ -178,18 +190,18 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
                 }
             }
             //populate Participant Code
-            if(nctNumber != null && participantName != null){
+            if (nctNumber != null && participantName != null) {
                 pe.Participant_Key__c = participantName + ' ' + nctNumber;
             }
             //populate referred date
-            if(pe.Participant_Status__c == PEStatusState.PE_STATUS_REFERRAL_SENT_TO_PI){
-                if(oldMap == null || (oldMap != null && oldMap.get(pe.Id).Participant_Status__c != pe.Participant_Status__c)){
+            if (pe.Participant_Status__c == PEStatusState.PE_STATUS_REFERRAL_SENT_TO_PI) {
+                if (oldMap == null || (oldMap != null && oldMap.get(pe.Id).Participant_Status__c != pe.Participant_Status__c)) {
                     pe.Referred_Date__c = Date.today();
                 }
             }
         }
 
-        if(!participantContacts.isEmpty()) update participantContacts;
+        if (!participantContacts.isEmpty()) update participantContacts;
     }
 
     @TestVisible
@@ -202,33 +214,33 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
         //get users if exist
         Map<Id, User> usersByContactId = new Map<Id, User>();
         Set<Id> participantContactIds = new Set<Id>();
-        for(Participant_Enrollment__c pe : newList) {
+        for (Participant_Enrollment__c pe : newList) {
             Participant__c participant = participantMap.get(pe.Participant__c);
-            if(participant != null && participant.Contact__c != null) participantContactIds.add(participant.Contact__c);
+            if (participant != null && participant.Contact__c != null) participantContactIds.add(participant.Contact__c);
         }
         for (User usr : CommunityService.getCommunityUsersByContactIds(participantContactIds)) usersByContactId.put(usr.ContactId, usr);
 
         //process PE items:
         List<Alert__c> alertsForInsert = new List<Alert__c>();
-        for(Participant_Enrollment__c newPE : newList){
+        for (Participant_Enrollment__c newPE : newList) {
             Study_Site__c ss = ssMap.get(newPE.Study_Site__c);
             HCP_Enrollment__c hcpe = hcpeMap.get(newPE.HCP__c);
             Participant__c participant = participantMap.get(newPE.Participant__c);
             User participantUser;
-            if(participant != null && participant.Contact__c != null) participantUser = usersByContactId.get(participant.Contact__c);
+            if (participant != null && participant.Contact__c != null) participantUser = usersByContactId.get(participant.Contact__c);
             Boolean updateCriteria = true;
-            if(oldMap != null){
+            if (oldMap != null) {
                 Participant_Enrollment__c oldPE = oldMap.get(newPE.Id);
                 updateCriteria = oldPE.Participant_Status__c != newPE.Participant_Status__c ||
                         oldPE.Participant__c != newPE.Participant__c || participantUser == null;
-                System.debug('OLD STATUS: ' +  oldPE.Participant_Status__c);
-                System.debug('NEW STATUS: ' +  newPE.Participant_Status__c);
-                System.debug('OLD PART ID: ' +  oldPE.Participant__c);
-                System.debug('NEW PART ID: ' +  newPE.Participant__c);
-                System.debug('PART USER: ' +  participantUser);
+                System.debug('OLD STATUS: ' + oldPE.Participant_Status__c);
+                System.debug('NEW STATUS: ' + newPE.Participant_Status__c);
+                System.debug('OLD PART ID: ' + oldPE.Participant__c);
+                System.debug('NEW PART ID: ' + newPE.Participant__c);
+                System.debug('PART USER: ' + participantUser);
             }
             System.debug('UPDATE CRITERIA: ' + updateCriteria);
-            if(!updateCriteria) continue;
+            if (!updateCriteria) continue;
             Boolean filterCriteria =
                     newPE.Participant_Status__c == PEStatusState.PE_STATUS_REFERRAL_SENT_TO_PI &&
                             newPE.Participant__c != null &&
@@ -241,21 +253,21 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
                             !participant.IsCountry_NOT_Eligible_for_Emails__c &&
                             participant.Contact__c != null;
             System.debug('FILTER CRITERIA: ' + filterCriteria);
-            if(filterCriteria){
-                if(participantUser == null){
+            if (filterCriteria) {
+                if (participantUser == null) {
                     System.debug('CREATE USER');
                     Id hcpContact;
-                    if(hcpe != null) hcpContact = hcpe.HCP_Contact__c;
+                    if (hcpe != null) hcpContact = hcpe.HCP_Contact__c;
                     toCreateUser.put(participant.Contact__c, hcpContact);
                     alertsForInsert.add(new Alert__c(
                             Contact__c = participant.Contact__c,
                             Alert_Code__c = Alert.ALERT_CODE_WELCOME_PH
                     ));
-                }else{
+                } else {
                     System.debug('NOTIFY USER');
-                    if(hcpe != null){
+                    if (hcpe != null) {
                         notificationMap.put(newPE.Id, participant.Contact__c);
-                    }else{
+                    } else {
                         notificationMapEmptyHCP.put(newPE.Id, participant.Contact__c);
                     }
                 }
@@ -267,18 +279,18 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
         }
 
         insert alertsForInsert;
-        if(toCreateUser.size() > 0) CommunityService.createParticipantUsers(toCreateUser);
-        if(notificationMap.size() > 0) SendEmailTemplate.sendEmailNotification(SendEmailTemplate.EMAIL_TEMPLATE_PATIENT1_NEW, notificationMap);
-        if(notificationMapEmptyHCP.size() > 0) SendEmailTemplate.sendEmailNotification(SendEmailTemplate.EMAIL_TEMPLATE_PATIENT2_NEW, notificationMapEmptyHCP);
+        if (toCreateUser.size() > 0) CommunityService.createParticipantUsers(toCreateUser);
+        if (notificationMap.size() > 0) SendEmailTemplate.sendEmailNotification(SendEmailTemplate.EMAIL_TEMPLATE_PATIENT1_NEW, notificationMap);
+        if (notificationMapEmptyHCP.size() > 0) SendEmailTemplate.sendEmailNotification(SendEmailTemplate.EMAIL_TEMPLATE_PATIENT2_NEW, notificationMapEmptyHCP);
         update contactsForChangeMode;
     }
 
     @TestVisible
-    private static void sendCalloutOnEligibilityPassed(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap){
+    private static void sendCalloutOnEligibilityPassed(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap) {
         String acceptedStatus = PEStatusState.PE_STATUS_ELIGIBILITY_PASSED;
-        for(Participant_Enrollment__c pe : newList){
-            if(pe.Participant_Status__c == acceptedStatus && (oldMap == null ||
-                    oldMap.get(pe.Id).Participant_Status__c != acceptedStatus)){
+        for (Participant_Enrollment__c pe : newList) {
+            if (pe.Participant_Status__c == acceptedStatus && (oldMap == null ||
+                    oldMap.get(pe.Id).Participant_Status__c != acceptedStatus)) {
                 IntegrationService.sendPEToStudyHubAsync(pe.Id);
             }
         }
@@ -286,23 +298,23 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
     }
 
     @TestVisible
-    private static void setChangedDate(List<Participant_Enrollment__c> newList){
-        for(Participant_Enrollment__c pe : newList){
-            pe.Medical_Record_Review_Completed_Date__c =  Datetime.now();
-            if(pe.Participant_Status__c != null && pe.Participant_Status_Last_Changed_Date__c == null){
+    private static void setChangedDate(List<Participant_Enrollment__c> newList) {
+        for (Participant_Enrollment__c pe : newList) {
+            pe.Medical_Record_Review_Completed_Date__c = Datetime.now();
+            if (pe.Participant_Status__c != null && pe.Participant_Status_Last_Changed_Date__c == null) {
                 pe.Participant_Status_Last_Changed_Date__c = Datetime.now();
             }
         }
     }
 
     @TestVisible
-    private static void resetNotesAndSetChangeDate(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap){
-        for(Participant_Enrollment__c pe : newList){
-            if(pe.Participant_Status__c != oldMap.get(pe.Id).Participant_Status__c ||
+    private static void resetNotesAndSetChangeDate(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap) {
+        for (Participant_Enrollment__c pe : newList) {
+            if (pe.Participant_Status__c != oldMap.get(pe.Id).Participant_Status__c ||
                     pe.Participant_Status_Last_Changed_Date__c != oldMap.get(pe.Id).Participant_Status_Last_Changed_Date__c ||
-                    pe.Last_Status_Changed_Notes__c != oldMap.get(pe.Id).Last_Status_Changed_Notes__c){
-                if(pe.Participant_Status_Last_Changed_Date__c == oldMap.get(pe.Id).Participant_Status_Last_Changed_Date__c)
-                    if(pe.Last_Status_Changed_Notes__c == oldMap.get(pe.Id).Last_Status_Changed_Notes__c)
+                    pe.Last_Status_Changed_Notes__c != oldMap.get(pe.Id).Last_Status_Changed_Notes__c) {
+                if (pe.Participant_Status_Last_Changed_Date__c == oldMap.get(pe.Id).Participant_Status_Last_Changed_Date__c)
+                    if (pe.Last_Status_Changed_Notes__c == oldMap.get(pe.Id).Last_Status_Changed_Notes__c)
                         pe.Last_Status_Changed_Notes__c = null;
                 pe.Participant_Status_Last_Changed_Date__c = Datetime.now();
             }
@@ -310,14 +322,14 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
     }
 
     @TestVisible
-    private static void createHistoryRecords(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap){
+    private static void createHistoryRecords(List<Participant_Enrollment__c> newList, Map<Id, Participant_Enrollment__c> oldMap) {
         List<Participant_Enrollment_Status_History__c> pesHistoryList = new List<Participant_Enrollment_Status_History__c>();
-        for(Participant_Enrollment__c pe : newList){
+        for (Participant_Enrollment__c pe : newList) {
             if ((oldMap == null && pe.Participant_Status__c != null) ||
                     (oldMap != null && (pe.Participant_Status__c != oldMap.get(pe.Id).Participant_Status__c ||
                             pe.Participant_Status_Last_Changed_Date__c != oldMap.get(pe.Id).Participant_Status_Last_Changed_Date__c ||
                             pe.Last_Status_Changed_Notes__c != oldMap.get(pe.Id).Last_Status_Changed_Notes__c)
-                    )){
+                    )) {
                 pesHistoryList.add(new Participant_Enrollment_Status_History__c(
                         Notes__c = pe.Last_Status_Changed_Notes__c,
                         Date__c = Datetime.now(),
@@ -364,7 +376,7 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
             for (Participant_Enrollment__c enrollment : ctpPE.get(ts.Clinical_Trial_Profile__c)) {
                 Boolean needToAdd = false;
                 if (enrollment.Participant_Status__c == ts.Active_On_Status__c) {
-                    if(PEStatusState.PE_STATUS_GROUP_COMPLETE.contains(enrollment.Participant_Status__c)
+                    if (PEStatusState.PE_STATUS_GROUP_COMPLETE.contains(enrollment.Participant_Status__c)
                             && ts.Is_Midpoint__c) continue;
 
                     if (oldMap != null) {
@@ -383,7 +395,7 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
 
         insert newInvitations;
         Map<Id, String> invitationsVisible = new Map<Id, String>();
-        for(SurveyInvitation inv : newInvitations) {
+        for (SurveyInvitation inv : newInvitations) {
             invitationsVisible.put(inv.Id, trialWhoseResponse.get(inv.Trial_Survey__c));
         }
 
@@ -428,44 +440,69 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
     }
 
     @TestVisible
-    private static void createVisitsSchedule(List<Participant_Enrollment__c> enrollments){
+    private static void createVisitsSchedule(List<Participant_Enrollment__c> enrollments, Map<Id, Participant_Enrollment__c> oldMap) {
+        Set<Id> peEnrollSuccessIds = new Set<Id>();
+        for (Participant_Enrollment__c pe : enrollments) {
+            if (pe.Participant_Status__c != oldMap.get(pe.Id).Participant_Status__c) {
+                if (pe.Participant_Status__c == PEStatusState.PE_STATUS_ENROLLMENT_SUCCESS) {
+                    peEnrollSuccessIds.add(pe.Id);
+                }
+            }
+        }
+
+        List<Participant_Enrollment__c> peWithParticipating = [
+                SELECT Id, Clinical_Trial_Profile__c
+                FROM Participant_Enrollment__c
+                WHERE Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c = 'Yes'
+                AND Id IN:peEnrollSuccessIds
+        ];
+
         Set<Id> ctpIds = new Set<Id>();
-        for(Participant_Enrollment__c pe : enrollments) ctpIds.add(pe.Clinical_Trial_Profile__c);
+        for (Participant_Enrollment__c pe : peWithParticipating) ctpIds.add(pe.Clinical_Trial_Profile__c);
         Map<Id, Clinical_Trial_Profile__c> ctpMap = new Map<Id, Clinical_Trial_Profile__c>([
                 SELECT Id, Visit_Plan__c
                 FROM Clinical_Trial_Profile__c
-                WHERE Id IN: ctpIds
+                WHERE Id IN:ctpIds
         ]);
 
         Set<Id> visitPlanIds = new Set<Id>();
-        for(Clinical_Trial_Profile__c ctp : ctpMap.values()) visitPlanIds.add(ctp.Visit_Plan__c);
-        Map<Id, Visit_Plan__c> visitPlansMap = new Map<Id,Visit_Plan__c>([
+        for (Clinical_Trial_Profile__c ctp : ctpMap.values()) visitPlanIds.add(ctp.Visit_Plan__c);
+        Map<Id, Visit_Plan__c> visitPlansMap = new Map<Id, Visit_Plan__c>([
                 SELECT Id, (SELECT Id, Name, Visit_Number__c, Visit_Schedule__c FROM Visits__r)
                 FROM Visit_Plan__c
-                WHERE Id IN: visitPlanIds
+                WHERE Id IN:visitPlanIds
         ]);
 
         List<Patient_Visit__c> patientVisits = new List<Patient_Visit__c>();
-        for(Participant_Enrollment__c pe : enrollments){
+        for (Participant_Enrollment__c pe : peWithParticipating) {
             Clinical_Trial_Profile__c ctp = ctpMap.get(pe.Clinical_Trial_Profile__c);
-            if(ctp == null) continue;
+            if (ctp == null) continue;
 
             Visit_Plan__c vp = visitPlansMap.get(ctp.Visit_Plan__c);
-            if(vp == null) continue;
+            if (vp == null) continue;
 
-            for(Visit__c visit : vp.Visits__r){
+            for (Visit__c visit : vp.Visits__r) {
                 patientVisits.add(VisitService.createPatientVisit(visit, pe.Id));
             }
         }
-        if(patientVisits.size() > 0) insert patientVisits;
+        if (patientVisits.size() > 0) insert patientVisits;
     }
 
     @TestVisible
-    private static void createStudyAlerts(List<SObject> newList) {
+    private static void createStudyAlerts(List<Participant_Enrollment__c> enrollments, Map<Id, Participant_Enrollment__c> oldMap) {
+        Set<Id> peEnrollSuccessIds = new Set<Id>();
+        for (Participant_Enrollment__c pe : enrollments) {
+            if (pe.Participant_Status__c != oldMap.get(pe.Id).Participant_Status__c) {
+                if (pe.Participant_Status__c == PEStatusState.PE_STATUS_ENROLLMENT_SUCCESS) {
+                    peEnrollSuccessIds.add(pe.Id);
+                }
+            }
+        }
+
         List<Participant_Enrollment__c> peWithParticipating = [
                 SELECT Id, Participant_Contact__c
                 FROM Participant_Enrollment__c
-                WHERE Id IN:newList
+                WHERE Id IN:peEnrollSuccessIds
                 AND Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c = 'Yes'
         ];
 
@@ -494,8 +531,8 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
             Map<Id, Participant_Enrollment__c> oldMap
     ) {
         List<Participant_Enrollment__c> completedPEs = new List<Participant_Enrollment__c>();
-        for(Participant_Enrollment__c pe : newList) {
-            if(pe.Participant_Status__c != oldMap.get(pe.Id).Participant_Status__c &&
+        for (Participant_Enrollment__c pe : newList) {
+            if (pe.Participant_Status__c != oldMap.get(pe.Id).Participant_Status__c &&
                     PEStatusState.PE_STATUS_GROUP_COMPLETE.contains(pe.Participant_Status__c)) {
                 completedPEs.add(pe);
             }
@@ -516,19 +553,62 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
         ]);
 
         List<Task> tasksForExpire = new List<Task>();
-        for(Task task : tasks) {
-            if(task.Description != null && invitationMap.containsKey(task.Description)) {
+        for (Task task : tasks) {
+            if (task.Description != null && invitationMap.containsKey(task.Description)) {
                 task.Status = TaskService.TASK_STATUS_EXPIRED;
                 tasksForExpire.add(task);
             }
         }
         update tasksForExpire;
 
-        System.debug('>>>completedPSEs.size = '+ completedPEs.size());
-        System.debug('>>>tasks.size = '+ tasks.size());
-        System.debug('>>>invitationMap.size = '+ invitationMap.size());
-        System.debug('>>>tasksForExpire.size = '+ tasksForExpire.size());
+        System.debug('>>>completedPSEs.size = ' + completedPEs.size());
+        System.debug('>>>tasks.size = ' + tasks.size());
+        System.debug('>>>invitationMap.size = ' + invitationMap.size());
+        System.debug('>>>tasksForExpire.size = ' + tasksForExpire.size());
 
         SurveyService.getInstance().expireInvitation(new List<Id>(invitationMap.keySet()));
+    }
+
+    @TestVisible
+    private static void setupCurrentEnrollment(List<Participant_Enrollment__c> enrollments, Map<Id, Participant_Enrollment__c> oldMap) {
+        List<Participant_Enrollment__c> completedPEs = new List<Participant_Enrollment__c>();
+        for (Participant_Enrollment__c pe : enrollments) {
+            if (oldMap != null && pe.Participant_Status__c != oldMap.get(pe.Id).Participant_Status__c) {
+                if (PEStatusState.PE_STATUS_GROUP_NOT_IN_PROGRESS_ALL.contains(pe.Participant_Status__c)) completedPEs.add(pe);
+            }
+        }
+
+        Set<Id> participantsIds = new Set<Id>();
+        for (Participant_Enrollment__c pe : enrollments) participantsIds.add(pe.Participant__c);
+        Map<Id, Participant__c> participantsMap = new Map<Id, Participant__c>([
+                SELECT Id, Current_Participant_Enrollment__c
+                FROM Participant__c
+                WHERE Id IN:participantsIds
+        ]);
+
+        Set<Participant__c> updatedParticipant = new Set<Participant__c>();
+        for (Participant_Enrollment__c pe : completedPEs) {
+            if (participantsMap.containsKey(pe.Participant__c)) {
+                Participant__c participant = participantsMap.get(pe.Participant__c);
+                if(participant.Current_Participant_Enrollment__c == pe.Id) {
+                    participant.Current_Participant_Enrollment__c = null;
+                    updatedParticipant.add(participant);
+                }
+            }
+        }
+
+        for (Participant_Enrollment__c pe : enrollments) {
+            if (PEStatusState.PE_STATUS_GROUP_IN_PROGRESS_ALL.contains(pe.Participant_Status__c)) {
+                if (participantsMap.containsKey(pe.Participant__c)) {
+                    Participant__c participant = participantsMap.get(pe.Participant__c);
+                    if (participant.Current_Participant_Enrollment__c == null) {
+                        if (updatedParticipant.contains(participant)) updatedParticipant.remove(participant);
+                        updatedParticipant.add(participant);
+                    }
+                }
+            }
+        }
+
+        if (!updatedParticipant.isEmpty()) update new List<Participant__c>(updatedParticipant);
     }
 }
